# website-monitor

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  Containerfile.collector  Containerfile.writer  LICENSE  Makefile  README.md  compose.yaml  monitor.example-config.yaml  pyproject.toml  renovate.json  schema.sql  setup.cfg
.github/workflows/: ci.yaml  dependabot.yaml
monitor/: collector.py  config.py  writer.py
tests/: conftest.py  test_collector.py  test_config.py  test_monitor.py  test_writer.py
