[project]
name = "monitor"
repository = "https://github.com/skoenig/website-monitor"
version = "0.1.1"
description = "Small conceptual website monitor using Kafka and PostgreSQL."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4"

[tool.poetry]

[tool.poetry.dependencies]
PyYAML = "6.*"
apscheduler = "3.*"
requests = "2.*"
kafka-python = "2.*"
psycopg2-binary = "2.*"

[tool.poetry.group.dev.dependencies]
pytest = "8.*"
coverage = "7.*"
pre-commit = "4.*"
ruff = "0.12.*"

[tool.coverage.run]
branch = true
source = ["monitor"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.ruff]
lint.ignore = ["E712"]
lint.per-file-ignores = {"*.ipynb" = ["ALL"]}
format.quote-style = "single"

[tool.yamlfix]
sequence_style = "block_style"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
